docs/api/qiskit/0.19/qiskit.quantum_info.SuperOp.mdx
---
title: SuperOp (v0.19)
description: API reference for qiskit.quantum_info.SuperOp in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.SuperOp
---

# SuperOp

<Class id="qiskit.quantum_info.SuperOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/channel/superop.py" signature="SuperOp(data, input_dims=None, output_dims=None)" modifiers="class">
  Superoperator representation of a quantum channel.

  The Superoperator representation of a quantum channel $\mathcal{E}$ is a matrix $S$ such that the evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ is given by

$$
|\mathcal{E}(\rho)\rangle\!\rangle = S |\rho\rangle\!\rangle
$$

  where the double-ket notation $|A\rangle\!\rangle$ denotes a vector formed by stacking the columns of the matrix $A$ *(column-vectorization)*.

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a quantum channel Superoperator operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as a superoperator.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a Numpy array of shape (4\*\*N, 4\*\*N) qubit systems will be used. If the input operator is not an N-qubit operator, it will assign a single subsystem with dimension specified by the shape of the input.

  ## Attributes

  <span id="superop-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.SuperOp.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="superop-data" />

  ### data

  <Attribute id="qiskit.quantum_info.SuperOp.data">
    Return data.
  </Attribute>

  <span id="superop-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.SuperOp.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="superop-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.SuperOp.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="superop-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.SuperOp.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="superop-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.SuperOp.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  ## Methods

  <span id="superop-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.SuperOp.__call__" signature="SuperOp.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="superop-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.SuperOp.__mul__" signature="SuperOp.__mul__(other)" />

  <span id="superop-add" />

  ### add

  <Function id="qiskit.quantum_info.SuperOp.add" signature="SuperOp.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="superop-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.SuperOp.adjoint" signature="SuperOp.adjoint()">
    Return the adjoint of the operator.
  </Function>

  <span id="superop-compose" />

  ### compose

  <Function id="qiskit.quantum_info.SuperOp.compose" signature="SuperOp.compose(other, qargs=None, front=False)">
    Return the composed quantum channel self @ other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The quantum channel self @ other.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if other has incompatible dimensions.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") matrices. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.SuperOp#dot "qiskit.quantum_info.SuperOp.dot") method.
  </Function>

  <span id="superop-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.SuperOp.conjugate" signature="SuperOp.conjugate()">
    Return the conjugate of the QuantumChannel.
  </Function>

  <span id="superop-copy" />

  ### copy

  <Function id="qiskit.quantum_info.SuperOp.copy" signature="SuperOp.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="superop-dot" />

  ### dot

  <Function id="qiskit.quantum_info.SuperOp.dot" signature="SuperOp.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** (*BaseOperator*) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The operator self \* other.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.
  </Function>

  <span id="superop-expand" />

  ### expand

  <Function id="qiskit.quantum_info.SuperOp.expand" signature="SuperOp.expand(other)">
    Return the tensor product channel other ⊗ self.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel.

    **Returns**

    the tensor product channel other ⊗ self as a SuperOp object.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="superop-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.SuperOp.input_dims" signature="SuperOp.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="superop-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.SuperOp.is_cp" signature="SuperOp.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="superop-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.SuperOp.is_cptp" signature="SuperOp.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving (CPTP).
  </Function>

  <span id="superop-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.SuperOp.is_tp" signature="SuperOp.is_tp(atol=None, rtol=None)">
    Test if a channel is completely-positive (CP)
  </Function>

  <span id="superop-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.SuperOp.is_unitary" signature="SuperOp.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="superop-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.SuperOp.multiply" signature="SuperOp.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="superop-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.SuperOp.output_dims" signature="SuperOp.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="superop-power" />

  ### power

  <Function id="qiskit.quantum_info.SuperOp.power" signature="SuperOp.power(n)">
    Return the compose of a QuantumChannel with itself n times.

    **Parameters**

    **n** (*int*) – compute the matrix power of the superoperator matrix.

    **Returns**

    the n-times composition channel as a SuperOp object.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if the input and output dimensions of the QuantumChannel are not equal, or the power is not an integer.
  </Function>

  <span id="superop-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.SuperOp.reshape" signature="SuperOp.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="superop-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.SuperOp.set_atol" signature="SuperOp.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="superop-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.SuperOp.set_rtol" signature="SuperOp.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="superop-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.SuperOp.subtract" signature="SuperOp.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="superop-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.SuperOp.tensor" signature="SuperOp.tensor(other)">
    Return the tensor product channel self ⊗ other.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel.

    **Returns**

    the tensor product channel self ⊗ other as a SuperOp object.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="superop-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.SuperOp.to_instruction" signature="SuperOp.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="superop-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.SuperOp.to_operator" signature="SuperOp.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="superop-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.SuperOp.transpose" signature="SuperOp.transpose()">
    Return the transpose of the QuantumChannel.
  </Function>
</Class>

